working on fixing divs to align on main page

--- a/main/new.css
+++ b/main/new.css
@@ -342,7 +342,7 @@ margin-left: 10%;
 
     .col-md-4{
         width: 80%;
-        padding: 6px;
+        padding: 10px;
     }
 
     .div-two{
@@ -367,6 +367,7 @@ margin-left: 10%;
     .one{
         margin-left: -2em;
         height: 2em;
+        padding: 4em;
     }
 
     .practice_header{
